# ml_skeleton

./: .gitignore  CLAUDE.md  CLAUDE_BEST_PRACTICES.md  Dockerfile  HPO_QUICK_START.md  HYPERPARAMETER_TUNING_GUIDE.md  LISTEN.MD  MUSIC_RECOMMENDATION_DELIVERY.md  Makefile  PLAN.MD  PLAN.md  PRE_RESTART_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SETUP_AFTER_RESTART.md  SIMSIAM_IMPLEMENTATION_PLAN.md  SPEECH_DETECTION.md  TODOS.txt  check_paths.py  docker-compose.yml  pyproject.toml  requirements.txt  run_music_pipeline.sh  test_database.py  updates.md
configs/: example.yaml  music_example.yaml  music_moco.yaml  music_recommendation.yaml
examples/: AUDIO_FILES_README.md  CUSTOMIZATION_GUIDE.md  QUICK_START.md  README.md  __init__.py  music_hello_world.py  music_recommendation.py  pytorch_example.py  tensorflow_example.py  two_moons.py
explr/: __init__.py
explr/core/: __init__.py  config.py  protocols.py
explr/frameworks/: __init__.py  pytorch.py  tensorflow.py
explr/runner/: __init__.py  cli.py  experiment.py
explr/tracking/: __init__.py  client.py
explr/tuning/: __init__.py  base.py  optuna_tuner.py  ray_tuner.py  search_space.py
explr/utils/: __init__.py  gpu.py  memory.py  seed.py  verify.py
ml_skeleton/: __init__.py
ml_skeleton/core/: __init__.py  config.py  protocols.py
ml_skeleton/frameworks/: __init__.py  pytorch.py  tensorflow.py
ml_skeleton/music/: __init__.py  audio_loader.py  augmentations.py  baseline_classifier.py  baseline_encoder.py  chunk_cache.py  clementine_db.py  dataset.py  dataset_stats.py  embedding_store.py  encoder_factory.py  genre_mapper.py  losses.py  metadata_utils.py  moco_dataset.py  moco_encoder.py  model_card.py  simsiam_encoder.py  speech_detector.py  xspf_playlist.py
ml_skeleton/protocols/: __init__.py  classifier.py  encoder.py
ml_skeleton/runner/: __init__.py  cli.py  experiment.py
ml_skeleton/tracking/: __init__.py  server.py
ml_skeleton/training/: __init__.py  classifier_trainer.py  encoder_trainer.py
ml_skeleton/tuning/: __init__.py  base.py  optuna_tuner.py  ray_tuner.py
ml_skeleton/utils/: __init__.py  early_stopping.py  gpu.py  memory.py  verify.py
scripts/: update_config_from_hpo.py
tests/: __init__.py  test_core.py  test_music.py
